--- a/app/views/hotels/_rooms_form.html.erb
+++ b/app/views/hotels/_rooms_form.html.erb
@@ -5,4 +5,5 @@
   <%= number_field_tag name = 'roomCost[]'%>
   <%= label_tag 'Rooms Available' %>
   <%= number_field_tag name = 'roomAvailable[]'%>
+  <%= file_field_tag name = 'roomImages[]'%>
 </div>
