--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,14 +10,14 @@
       <%end%>   
       <% if manager_logged_in? && manager_has_hotel?%>
       <li><%= link_to "Hotel Details" , hotelManager_dashboard_path %></li>
-      <li><%= button_to "Log Out" , hotelManager_logout_path , data:{ turbo_method: :delete} ,method: :delete %> </li>
+      <li><%= link_to "Log Out" , hotelManager_logout_path %> </li>
       <%elsif manager_logged_in?%>
       <li><%= link_to "Register your Hotel" , hotel_create_path%></li>
-      <li><%= button_to "Log Out" , hotelManager_logout_path , data:{ turbo_method: :delete} ,method: :delete %> </li>
+      <li><%= link_to "Log Out" , hotelManager_logout_path %> </li>
       <%end%>
       <% if user_logged_in?%>
       <li><%= link_to "Your bookings" , user_dashboard_path %></li>
-      <li><%= button_to "Log Out" , user_logout_path , data:{turbo_method: :delete} , method: :delete %></li>
+      <li><%= link_to "Log Out" , user_logout_path %></li>
 </li>
       <%end%>
     </ul>
