Hotel price updation done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -73,7 +73,7 @@
   <section class= "info_sec">
   <div class = "info_sec_content">
   <h2>Explore more and enjoy more</h2>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, non laboriosam laborum rem nostrum sit ratione maiores dolorum ipsa. Commodi.</p>
+  <p>Need a place to stay? Let us help you! Compare deals of your favorite hotels. All in one place. Hotels at great rate. Compare & save. Hotel deals. Act fast for great deals. Free and easy to use.</p>
   </div>
   <div class = "img_container">
   </div>
