--- a/app/assets/stylesheets/managerDashboard.css
+++ b/app/assets/stylesheets/managerDashboard.css
@@ -53,3 +53,22 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 15px;
 }
+
+.hotel_edit_form{
+    width: 50%;
+    margin-inline:auto;
+    padding:1rem;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 15px;
+    margin-block:20px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+.hotel_edit_form input{
+    display: inline-block;
+    margin-block:10px;
+    padding:0.8rem;
+}
