--- a/app/views/booking_mailer/new_booking_mailer.text.erb
+++ b/app/views/booking_mailer/new_booking_mailer.text.erb
@@ -1,4 +1,4 @@
-    Hello <%= @user.name %>
+    Hello <%= @user.name %>,
     You have booked rooms at <%= @hotelname %>
     Booking details
     --------------------------
