--- a/app/views/managers/dashboard.html.erb
+++ b/app/views/managers/dashboard.html.erb
@@ -10,6 +10,7 @@
     <p>
       <%= @hotel.description %>
     </p>
+    <p><%= link_to "Change prices" , hotelManager_edit_path %></p>
   </div>
   
       <div class="searchElements">
