--- a/app/views/managers/_result.html.erb
+++ b/app/views/managers/_result.html.erb
@@ -13,5 +13,6 @@
 <p>Num Rooms Booked <%= booking.numRoomsBooked%></p>
 <p>CheckInDate <%= booking.checkInDate%></p>
 <p>CheckOutDate <%= booking.checkOutDate%></p>
+<p>isCancelled <%= booking.isCancelled %></p>
 <%end%>
 <%end%>
