--- a/app/assets/stylesheets/managerDashboard.css
+++ b/app/assets/stylesheets/managerDashboard.css
@@ -1,4 +1,5 @@
 .hotel_details{
+    flex: 1 1 30%;
     background-color: white;
     padding:1.3rem;
     font-size:1.2rem;
@@ -13,9 +14,14 @@
     align-items: flex-start;
     padding:2rem; 
 }
-
+.search_forms{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-around;
+}
 .searchElements{
-    flex:1 1 60%;
+    flex:1 1 70%;
     font-size:1rem;
 }
 
@@ -31,7 +37,7 @@
 
 .hotel_bookings_header{
     display: grid;
-    grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .hotel_bookings_header li {
@@ -42,7 +48,7 @@
 
 .booking_row {
     display: grid;
-    grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr 1fr 1fr 1fr 1fr;
     font-size: 1.15rem;
 }
 
