--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "modal.js", "data-turbo-track": "reload", defer: true %>
 <div class="profile_first_container">
     <div class="profileIntro">
         <h1>Welcome <span style="color:#c374be;"><%= current_user.name %></span> ! </h1>
