--- a/app/assets/stylesheets/book.css
+++ b/app/assets/stylesheets/book.css
@@ -10,17 +10,19 @@
 .booking_details_header{
     display: grid;
     grid-template-columns: 2fr 2fr 1fr 1fr 1fr 1fr;
+    column-gap: 12px;
 }
 
 .booking_details_header li {
     list-style-type: none;
     font-size: 1.5rem;
-    font-weight: 1.5rem;
+    font-weight: 1000;
 }
 .tbooking_row {
     display: grid;
     grid-template-columns: 2fr 2fr 1fr 1fr 1fr 1fr;
     font-size: 1.2rem;
+    column-gap: 12px;
 }
 
 .book_preview{
