--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -6,11 +6,11 @@
     <div class="input_container">
         <div class="row">
             <%= f.label :email%>
-            <%= f.email_field :email, placeholder:"Email"%>
+            <%= f.email_field :email, placeholder:"Email" , required:true%>
         </div>
         <div class="row">
             <%= f.label :password%>
-            <%= f.password_field :password ,placeholder: "Password"%>
+            <%= f.password_field :password ,placeholder: "Password" , required:true%>
         </div>
         <%= f.submit "Login" , :class => 'login_btn'%>
     </div>
