--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -5,18 +5,18 @@
     <div class="input_container">
         <div class="row">
             <%= f.label :name%>
-            <%= f.text_field :name , placeholder: "Name"%>
+            <%= f.text_field :name , placeholder: "Name" , required:true%>
         </div>
         <div class="row">
             <%= f.label :email%>
-            <%= f.email_field :email , placeholder: "Email"%>
+            <%= f.email_field :email , placeholder: "Email" , required:true%>
         </div>
         <div class="row">
             <%= f.label :password%>
-            <%= f.password_field :password , placeholder: "Password"%>
+            <%= f.password_field :password , placeholder: "Password" , required:true%>
         </div>
         <div class="row">
-            <%= f.file_field :avatar %>
+            <%= f.file_field :avatar , required:true %>
         </div>
         <%= f.submit "Sign up" , :class => 'login_btn'%>
     </div>
