--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,5 @@
 <div class="footer">
-<p>Made by kathir</p>
+<p>Made 
+ <%# <i class="fa-solid fa-heart" style="color: #ffffff;"></i>  %>
+ by kathir</p>
 </div>
