--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -73,9 +73,9 @@
   <section class= "info_sec">
   <div class = "info_sec_content">
   <h2>Explore more and enjoy more</h2>
-  <p>Need a place to stay? Let us help you! Compare deals of your favorite hotels. All in one place. Hotels at great rate. Compare & save. Hotel deals. Act fast for great deals. Free and easy to use.<i class="fa-solid fa-location-dot"></i><i class="fa-solid fa-location-dot fa-xl"></i></p>
+  <p>Need a place to stay? Let us help you! Compare deals of your favorite hotels. All in one place. Hotels at great rate. Compare & save. Hotel deals. Act fast for great deals. Free and easy to use.</p>
   </div>
   <div class = "img_container">
   </div>
   </section>
-<i class="fa-light fa-location-dot"></i>
+<%= render '/layouts/footer'%>
