--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -22,7 +22,7 @@
         <li>Total price</li>
         <li>Check in date</li>
         <li>Check out date</li>
-        <li>Rating</li>
+        <li>Rating(1-5)</li>
         </div>
  
 <%= render 'booking', obj: @onGoingBookings %>
@@ -42,7 +42,7 @@
 <li>Total price</li>
 <li>Check in date</li>
 <li>Check out date</li>
-<li>Rating</li>
+<li>Rating(1-5)</li>
 </div>
  <div >
 </div>
