--- a/app/assets/stylesheets/navBar.css
+++ b/app/assets/stylesheets/navBar.css
@@ -197,9 +197,7 @@ nav a:hover {
   margin-top: auto;
   padding:0.8rem;
   font-size: large;
-  text-align: center;
-  position:absolute;
-  bottom:0px;
-  left:0px;
-  right: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
