--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HotelMgmt</title>
+    <title>Book Easy</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -17,7 +17,7 @@
 
   <body>
   <%= render 'layouts/messages'%>
-<%= render '/layouts/navigation'%>
+  <%= render '/layouts/navigation'%>
   <%= yield %>
   </body>
 </html>
