--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -16,7 +16,7 @@
             <%= f.password_field :password , placeholder: "Password" , required:true%>
         </div>
         <div class="row">
-            <%= f.file_field :avatar , required:true %>
+            <%= f.file_field :avatar , required:true , accept:"image/png, image/jpeg"%>
         </div>
         <%= f.submit "Sign up" , :class => 'login_btn'%>
     </div>
