manager dashboard change

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -25,8 +25,8 @@
         <li>Rating(1-5)</li>
         </div>
  
-<%= render 'booking', obj: @onGoingBookings %>
-  <%= will_paginate @onGoingBookings%>
+<%= render 'booking', obj: @pastBookings %>
+  <%= will_paginate @pastBookings%>
        <%end%>
     </div>
 
