--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -5,7 +5,7 @@
         <div class="panel-heading">
           <h2 class="panel-title">
             <%= pluralize(obj.errors.count, "error") %>
-            Errors
+            <%# Errors %>
           </h2>
           <div class="panel-body">
             <ul>
